# pattern_finding_framework

./: .gitignore  CMakeLists.txt  README.md  main.cpp
deprecated/: PFAbstractAlgorithmStage.h  PFAlgorithmPipeline.cpp
include/algorithms/: PFAlgorithmPipeline.h  PFPipelineObjectContainer.h
include/algorithms/pipeline_objects/: PFJson.h  PFPatternSet.h  PFPipelineObject.h  PFTrackletSet.h  PFVertexSet.h
include/algorithms/stages/: PFAlgorithmStage.h
include/algorithms/stages/pattern/: PFDefaultPatternFormer.h  PFPatternFormer.h
include/algorithms/stages/tracklet/: PFDefaultTrackletFormer.h  PFTrackletFormer.h
include/algorithms/stages/vertex/: PFKMeansVertexFormer.h  PFVertexFormer.h
include/containers/: PFEvent.h  PFPattern.h  PFTracklet.h  PFVertex.h
scripts/: build.sh  run.sh
src/algorithms/: PFAlgorithmPipeline.cpp
src/algorithms/stages/: PFAlgorithmStage.cpp
src/algorithms/stages/pattern/: PFDefaultPatternFormer.cpp
src/algorithms/stages/tracklet/: PFDefaultTrackletFormer.cpp
src/algorithms/stages/vertex/: PFKMeansVertexFormer.cpp
src/containers/: PFEvent.cpp  PFPattern.cpp  PFTracklet.cpp  PFVertex.cpp
